--- a/ecom/package.json
+++ b/ecom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecom",
-  "Proxy": "http://localhost:8000/",
+  "Proxy": "http://localhost:8000",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^14.5.2",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
+    "braintree-web-drop-in-react": "^1.2.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
